--- a/Shopper/app/src/main/AndroidManifest.xml
+++ b/Shopper/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="erostamas.shopper" >
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -17,18 +18,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DisplayShoppings"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_display_shoppings"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/FullscreenTheme" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="erostamas.shopper.MainActivity" />
-        </activity>
-        <activity
             android:name=".DisplayShoppingsActivity"
-            android:label="@string/title_activity_display_shoppings"
+            android:label="Shoppings"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -36,7 +27,7 @@
         </activity>
         <activity
             android:name=".DisplayStoresActivity"
-            android:label="@string/title_activity_display_store"
+            android:label="Stores"
             android:parentActivityName=".DisplayShoppingsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -44,7 +35,7 @@
         </activity>
         <activity
             android:name=".DisplayItemsActivity"
-            android:label="@string/title_activity_display_items"
+            android:label="Items"
             android:parentActivityName=".DisplayStoresActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -52,11 +43,30 @@
         </activity>
         <activity
             android:name=".CreateShoppingActivity"
-            android:label="@string/title_activity_create_shopping"
-            android:parentActivityName=".DisplayShoppingsActivity" >
+            android:label="Create new shopping"
+            android:parentActivityName=".DisplayShoppingsActivity"
+            android:noHistory="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="erostamas.shopper.MainActivity" />
+        </activity>
+        <activity
+            android:name=".CreateItemActivity"
+            android:label="Add new item"
+            android:parentActivityName=".DisplayItemsActivity"
+            android:noHistory="true">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="erostamas.shopper.DisplayItemsActivity" />
+        </activity>
+        <activity
+            android:name=".CreateStoreActivity"
+            android:label="Add new store"
+            android:parentActivityName=".DisplayStoresActivity"
+            android:noHistory="true">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="erostamas.shopper.DisplayStoresActivity" />
         </activity>
     </application>
 
